--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #3B5BA7;
     margin: 0;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 header {
@@ -63,7 +64,7 @@ header img {
     align-items: center;
 }
 
-.targetPresentation {
+#targetContainer {
     display: none;
     flex-direction: column;
     font-family: 'Roboto Condensed', sans-serif;
@@ -74,12 +75,12 @@ header img {
     padding: .2rem .8rem;
 }
 
-.targetPresentation h4 {
+#targetContainer h4 {
     text-align: left;
     margin: 0;
 }
 
-.targetPresentation ul {
+#targetContainer ul {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -88,7 +89,7 @@ header img {
     margin: 1rem 0;
 }
 
-.targetPresentation li {
+#targetContainer li {
     padding: .2rem .4rem;
     margin: 0 .3rem;
     color: #f1f1f1;
@@ -138,12 +139,12 @@ header img {
     text-align: center;
 }
 
-#listContainer .targetPresentation {
+#listContainer #targetContainer {
     margin: 1rem 1rem;
 }
 
-#listContainer .targetPresentation h4,
-#listContainer .targetPresentation span {
+#listContainer #targetContainer h4,
+#listContainer #targetContainer span {
     color: #3B5BA7;
 }
 
@@ -153,7 +154,7 @@ header img {
 }
 
 #filtersContainer {
-    max-height: 100vh;
+    min-height: 100vh;
     width: 20%;
     display: flex;
     flex-direction: column;
@@ -163,6 +164,54 @@ header img {
     background-color: #1e3b7e;
     color: #f1f1f1;
 }
+
+#filtersContainer label {
+    font-family: sans-serif;
+    font-size: 16px;
+    margin-bottom: .5rem;
+    width: 80%;
+    text-align: left;
+}
+
+#filtersContainer #filterSelect {
+    display: block;
+    font-size: 16px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 700;
+    color: #444;
+    line-height: 1.3;
+    padding: .6em 1.4em .5em .8em;
+    width: 80%;
+    max-width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    border-radius: .5em;
+    appearance: none;
+    background-color: #fff;
+}
+
+#filtersContainer #filterButton {
+    color: #444;
+    line-height: 1.3;
+    font-weight: bold;
+    padding: .6em 1.4em .5em .8em;
+    width: 30%;
+    margin: .8rem 0;
+    border: 2px solid #1e3b7e;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    border-radius: .5em;
+    appearance: none;
+    background-color: #FECB00;
+    cursor: pointer;
+}
+
+#filtersContainer #filterButton:hover{
+    border: 2px solid #142c63;
+    box-shadow: 0 1px 0 5px rgba(17, 3, 43, 0.185);
+}
+
 
 .listButton {
     cursor: pointer;
